arc: Unescape file name for ArcFileSystemHost::GetFileName

GURL::ExtractFileName() does not unescape the string.

Bug: 806192
Test: unit_tests --gtest_filter="ArcFileSystemBridgeTest.*"
Change-Id: I31409e7554ae361de9cca809dfbe1a6ef6111b0e
Reviewed-on: https://chromium-review.googlesource.com/888189
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Commit-Queue: Ryo Hashimoto <hashimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532314}
Former-commit-id: 31233e09db9e32c9bf7e26e774f86502c5c85379